# Numericals-CUDA

./: .clang-format  CMakeLists.txt  README.md
cusolver/: CMakeLists.txt  CUDASolver.cpp  CUDASolver.h  main.cpp  main.py
include/: CudaSolver.h  gauss.hpp  utils_vec.hpp
lab01/: CMakeLists.txt  main.cpp
lab01/include/: iterative_method.hpp  option_solver.hpp  tests.hpp  utils.hpp
lab01/src/: gauss.cpp  iterative_method.cpp  option_solver.cpp  solve.cpp  utils.cpp
lab01/tests/: tests.cpp
lab02/include/: CuBLASTemplate.h  CudaSolver.h
lab02/src/: main.cpp
playzone/: CMakeLists.txt  main.cpp
src/: CudaSolver.cpp  gauss.cpp  main.cpp  option_solver.cpp
